--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ buildscript
     dependencies
     {
         // For markdown -> html
-        classpath 'com.atlassian.commonmark:commonmark:0.13.0'
+        classpath 'com.atlassian.commonmark:commonmark:0.14.0'
         // To create a unified javadoc across submodules and top-level module:
         classpath 'com.netflix.nebula:gradle-aggregate-javadocs-plugin:3.0.1'
     }
@@ -23,8 +23,8 @@ buildscript
 /* Gradle plugins available in the official gradle plugins repository */
 plugins
 {
-    // Static analysis tool sonarqube client, compatible with sonarqube 7.5:
-    id 'org.sonarqube' version '2.7.1'
+    // Static analysis tool sonarqube client
+    id 'org.sonarqube' version '2.8'
 
     //id 'com.github.jacobono.jaxb' version '1.3.5'
     // Above is unmaintained, less gradle-y, below fork has several improvements
@@ -49,7 +49,7 @@ plugins
     id 'com.github.ksoichiro.console.reporter' version '0.6.2'
 
     // To discover library versions with known vulnerabilities
-    id 'org.owasp.dependencycheck' version '5.2.2'
+    id 'org.owasp.dependencycheck' version '5.3.0'
 }
 
 repositories
@@ -186,7 +186,7 @@ project(':wres-util')
 
         compile 'org.slf4j:slf4j-api:1.8.0-beta4'
 
-        compile 'com.google.guava:guava:28.1-jre'
+        compile 'com.google.guava:guava:28.2-jre'
         compile group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
 
         compile('edu.ucar:cdm-core:5.2.0')
@@ -196,23 +196,23 @@ project(':wres-util')
         }
 
         // Update the org.apache.httpcomponents modules depended upon by cdm
-        compile 'org.apache.httpcomponents:httpclient:4.5.10'
-        compile 'org.apache.httpcomponents:httpcore:4.4.12'
-        compile 'org.apache.httpcomponents:httpmime:4.5.10'
+        compile 'org.apache.httpcomponents:httpclient:4.5.11'
+        compile 'org.apache.httpcomponents:httpcore:4.4.13'
+        compile 'org.apache.httpcomponents:httpmime:4.5.11'
 
         runtime 'ch.qos.logback:logback-classic:1.3.0-alpha4'
 
         // Because cdm uses apache commons logging, bridge to slf4j
         runtime 'org.slf4j:jcl-over-slf4j:1.8.0-beta4'
 
-        testCompile 'junit:junit:4.13-beta-3'
+        testCompile 'junit:junit:4.13'
 
         // Mocking help
         testCompile 'org.mockito:mockito-core:3.2.4'
 
         // super-duper mocking help (mocking static, private methods)
-        testCompile 'org.powermock:powermock-api-mockito2:2.0.4'
-        testCompile 'org.powermock:powermock-module-junit4:2.0.4'
+        testCompile 'org.powermock:powermock-api-mockito2:2.0.5'
+        testCompile 'org.powermock:powermock-module-junit4:2.0.5'
 
         testCompile files('../libs/external/EVS.jar')
     }
@@ -225,7 +225,7 @@ project(':wres-system')
         compile project(':wres-util')
         compile 'org.slf4j:slf4j-api:1.8.0-beta4'
 
-        compile 'com.google.guava:guava:28.1-jre'
+        compile 'com.google.guava:guava:28.2-jre'
 
         // to use native postgres copy, need this on compile, otherwise runtime
         compile 'org.postgresql:postgresql:42.2.10'
@@ -239,16 +239,16 @@ project(':wres-system')
         compile 'org.slf4j:jul-to-slf4j:1.8.0-beta4'
 
         //JB @ 02/16/17
-        testCompile group: 'com.google.guava', name: 'guava-testlib', version: '28.1-jre'
+        testCompile group: 'com.google.guava', name: 'guava-testlib', version: '28.2-jre'
 
-        testCompile 'junit:junit:4.13-beta-3'
+        testCompile 'junit:junit:4.13'
 
         // Mocking help
         testCompile 'org.mockito:mockito-core:3.2.4'
 
         // super-duper mocking help (mocking static, private methods)
-        testCompile 'org.powermock:powermock-api-mockito2:2.0.4'
-        testCompile 'org.powermock:powermock-module-junit4:2.0.4'
+        testCompile 'org.powermock:powermock-api-mockito2:2.0.5'
+        testCompile 'org.powermock:powermock-module-junit4:2.0.5'
 
         // Use mockserver to test certificate utilities
         testCompile 'org.mock-server:mockserver-netty:5.9.0'
@@ -270,7 +270,7 @@ project(':wres-datamodel')
         compile group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
         compile project(':wres-config')
 
-        testCompile 'junit:junit:4.13-beta-3'
+        testCompile 'junit:junit:4.13'
 
         testCompile files('../libs/external/EVS.jar')
     }
@@ -305,11 +305,11 @@ project(':wres-io')
         }
 
 
-        compile group: 'org.apache.commons', name: 'commons-compress', version: '1.19'
+        compile group: 'org.apache.commons', name: 'commons-compress', version: '1.20'
 
-        compile group: 'org.liquibase', name: 'liquibase-core', version: '3.8.4'
+        compile group: 'org.liquibase', name: 'liquibase-core', version: '3.8.6'
 
-        compile( group: 'com.amazonaws', name: 'aws-java-sdk-s3', version: '1.11.700' )
+        compile( group: 'com.amazonaws', name: 'aws-java-sdk-s3', version: '1.11.725' )
         {
             // Because we use slf4j, not jcl:
             exclude group: 'commons-logging', module: 'commons-logging'
@@ -325,10 +325,10 @@ project(':wres-io')
         compile 'org.glassfish:javax.json:1.1.4'
 
         // Easier MD5
-        compile 'commons-codec:commons-codec:1.13'
+        compile 'commons-codec:commons-codec:1.14'
 
         // Better-than-Java-11's HTTP client
-        compile 'com.squareup.okhttp3:okhttp:4.3.1'
+        compile 'com.squareup.okhttp3:okhttp:4.4.0'
 
         // Because org.postgresql:postgresql uses JUL logging, bridge at runtime
         runtime 'org.slf4j:jul-to-slf4j:1.8.0-beta4'
@@ -337,16 +337,16 @@ project(':wres-io')
         runtime 'org.slf4j:jcl-over-slf4j:1.8.0-beta4'
 
         //JB @ 02/16/17
-        testCompile group: 'com.google.guava', name: 'guava-testlib', version: '28.1-jre'
+        testCompile group: 'com.google.guava', name: 'guava-testlib', version: '28.2-jre'
 
-        testCompile 'junit:junit:4.13-beta-3'
+        testCompile 'junit:junit:4.13'
 
         // Mocking help
         testCompile 'org.mockito:mockito-core:3.2.4'
 
         // super-duper mocking help (mocking static, private methods)
-        testCompile 'org.powermock:powermock-api-mockito2:2.0.4'
-        testCompile 'org.powermock:powermock-module-junit4:2.0.4'
+        testCompile 'org.powermock:powermock-api-mockito2:2.0.5'
+        testCompile 'org.powermock:powermock-module-junit4:2.0.5'
 
         // Use mockserver as a mock server for mock API responses
         testCompile 'org.mock-server:mockserver-netty:5.9.0'
@@ -400,7 +400,7 @@ project(':wres-metrics')
         compile 'org.slf4j:slf4j-api:1.8.0-beta4'
 
         testCompile project (':wres-datamodel')
-        testCompile 'junit:junit:4.13-beta-3'
+        testCompile 'junit:junit:4.13'
         testCompile 'org.mockito:mockito-core:3.2.4'
     }
 }
@@ -415,7 +415,7 @@ project(':wres-vis')
 
         compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.9'
         compile group: 'com.sun.xml.fastinfoset', name: 'FastInfoset', version: '1.2.17'
-        compile 'com.google.guava:guava:28.1-jre'
+        compile 'com.google.guava:guava:28.2-jre'
         compile 'org.slf4j:slf4j-api:1.8.0-beta4'
         runtime 'ch.qos.logback:logback-classic:1.3.0-alpha4'
 
@@ -428,7 +428,7 @@ project(':wres-vis')
 
         testCompile project (':wres-datamodel')
         testCompile files('../libs/external/ohdcommonchps.jar')
-        testCompile 'junit:junit:4.13-beta-3'
+        testCompile 'junit:junit:4.13'
         //Must load jfreechart explicitly before EVS.jar to avoid conflicting versions
         testCompile files('../libs/external/jfreechart-1.0.9.jar')
         testCompile files('../libs/external/EVS.jar')
@@ -468,7 +468,7 @@ project(':wres-config')
 
         runtime 'org.eclipse.persistence:org.eclipse.persistence.moxy:2.7.6'
 
-        testCompile 'junit:junit:4.13-beta-3'
+        testCompile 'junit:junit:4.13'
 
         // May help in future with #37380, may need to modify sources
         // available at https://git.apache.org/cxf-xjc-utils.git in dv dir:
@@ -566,7 +566,7 @@ project(':wres-grid')
         // Because cdm uses apache commons logging, bridge to slf4j
         runtime 'org.slf4j:jcl-over-slf4j:1.8.0-beta4'
 
-        testCompile 'junit:junit:4.13-beta-3'
+        testCompile 'junit:junit:4.13'
     }
 }
 
@@ -620,7 +620,7 @@ project(':wres-messages')
         compile 'org.slf4j:slf4j-api:1.8.0-beta4'
         compile 'com.google.protobuf:protobuf-java:3.11.4'
 
-        testCompile 'junit:junit:4.13-beta-3'
+        testCompile 'junit:junit:4.13'
     }
 }
 
@@ -634,7 +634,7 @@ project(':wres-worker')
         compile 'com.rabbitmq:amqp-client:5.8.0'
         runtime 'ch.qos.logback:logback-classic:1.3.0-alpha4'
 
-        testCompile 'junit:junit:4.13-beta-3'
+        testCompile 'junit:junit:4.13'
     }
 
     apply plugin: 'application'
@@ -692,29 +692,29 @@ project(':wres-tasker')
         // Update the jetty-continuation depended upon by above jersey dep
         compile 'org.eclipse.jetty:jetty-continuation:9.4.26.v20200117'
 
-        compile 'com.github.ben-manes.caffeine:caffeine:2.8.0'
+        compile 'com.github.ben-manes.caffeine:caffeine:2.8.1'
 
         // To accurately detect mime types of files.
-        compile 'org.apache.tika:tika-core:1.22'
+        compile 'org.apache.tika:tika-core:1.23'
 
         runtime 'ch.qos.logback:logback-classic:1.3.0-alpha4'
-        runtime 'org.glassfish.jersey.core:jersey-server:2.29.1'
+        runtime 'org.glassfish.jersey.core:jersey-server:2.30'
 
         // Needed to prevent "java.lang.IllegalStateException: InjectionManagerFactory not found."
         // Thanks, https://luohuahuang.org/2017/11/13/jersey-illegalstateexception-injectionmanagerfactory/
-        runtime 'org.glassfish.jersey.inject:jersey-hk2:2.29.1'
+        runtime 'org.glassfish.jersey.inject:jersey-hk2:2.30'
 
-        testCompile 'junit:junit:4.13-beta-3'
+        testCompile 'junit:junit:4.13'
 
         // To generate fake certificates and keys for testing
-        testCompile 'org.bouncycastle:bcpkix-jdk15on:1.63'
-        testCompile 'org.bouncycastle:bcprov-jdk15on:1.63'
+        testCompile 'org.bouncycastle:bcpkix-jdk15on:1.64'
+        testCompile 'org.bouncycastle:bcprov-jdk15on:1.64'
 
         // To test against an embedded AMQP broker
-        testCompile 'org.apache.qpid:qpid-broker-core:7.1.6'
+        testCompile 'org.apache.qpid:qpid-broker-core:7.1.8'
         // Provides support for both 0-8 and 0-9-1
-        testCompile 'org.apache.qpid:qpid-broker-plugins-amqp-0-8-protocol:7.1.6'
-        testCompile 'org.apache.qpid:qpid-broker-plugins-memory-store:7.1.6'
+        testCompile 'org.apache.qpid:qpid-broker-plugins-amqp-0-8-protocol:7.1.8'
+        testCompile 'org.apache.qpid:qpid-broker-plugins-memory-store:7.1.8'
     }
 
     apply plugin: 'application'
@@ -897,23 +897,23 @@ dependencies
     compile 'javax.annotation:javax.annotation-api:1.3.2'
     compile 'org.eclipse.jetty:jetty-server:9.4.26.v20200117'
     compile 'org.eclipse.jetty:jetty-webapp:9.4.26.v20200117'
-    compile 'org.glassfish.jersey.containers:jersey-container-servlet-core:2.29.1'
+    compile 'org.glassfish.jersey.containers:jersey-container-servlet-core:2.30'
     // Update the jetty-continuation that above jersey dep depends on
     compile 'org.eclipse.jetty:jetty-continuation:9.4.26.v20200117'
 
     compile 'com.github.ben-manes.caffeine:caffeine:2.8.0'
 
-    runtime 'org.glassfish.jersey.core:jersey-server:2.29.1'
-    runtime 'org.glassfish.jersey.containers:jersey-container-jetty-http:2.29.1'
-    runtime 'org.glassfish.jersey.inject:jersey-hk2:2.29.1'
+    runtime 'org.glassfish.jersey.core:jersey-server:2.30'
+    runtime 'org.glassfish.jersey.containers:jersey-container-jetty-http:2.30'
+    runtime 'org.glassfish.jersey.inject:jersey-hk2:2.30'
 
     runtime 'ch.qos.logback:logback-classic:1.3.0-alpha4'
 
 
     testCompile group: 'commons-io', name: 'commons-io', version: '2.6'
-    testCompile group: 'com.google.guava', name: 'guava-testlib', version: '28.1-jre'
-    testCompile group: 'com.google.guava', name: 'guava', version: '28.1-jre'
-    testCompile 'junit:junit:4.13-beta-3'
+    testCompile group: 'com.google.guava', name: 'guava-testlib', version: '28.2-jre'
+    testCompile group: 'com.google.guava', name: 'guava', version: '28.2-jre'
+    testCompile 'junit:junit:4.13'
     testCompile 'org.mockito:mockito-core:3.2.4'
 }
 
