Add .gitignore to ignore wres-statistics generated code
Refs #77981

--- a/systests/.gitignore
+++ b/systests/.gitignore
@@ -11,3 +11,7 @@ wresSysTestResults*
 *.bmp
 *.tif
 *.tiff
+
+# Generated messages code
+../wres-messages/src/**/generated/**
+../wres-statistics/src/**/generated/**
