--- a/build.gradle
+++ b/build.gradle
@@ -607,10 +607,30 @@ project(':wres-statistics')
         // Flatbuffers
         compile group: 'com.google.flatbuffers', name: 'flatbuffers-java', version: '1.12.0'
 
+        // JMS API
+        compile group: 'javax.jms', name: 'javax.jms-api', version: '2.0.1'
+
+        runtime 'ch.qos.logback:logback-classic:1.3.0-alpha4'
+
         testCompile group: 'com.google.protobuf', name: 'protobuf-java-util', version: '3.0.0-beta-1'
         testCompile 'junit:junit:4.13'
         testCompile project(':wres-datamodel')
         testCompile project(':wres-config')
+
+        // JMS API
+        testCompile group: 'javax.jms', name: 'javax.jms-api', version: '2.0.1'
+        
+        // QPID broker
+        testCompile 'org.apache.qpid:qpid-broker-core:7.1.8'
+
+        // QPID broker support for AMQP 0.8 and 0.9.1 (not 1.0)
+        testCompile 'org.apache.qpid:qpid-broker-plugins-amqp-0-8-protocol:7.1.8'
+
+        // QPID embedded (aka in-memory) broker support
+        testCompile 'org.apache.qpid:qpid-broker-plugins-memory-store:7.1.8'
+
+        // QPID JMS client for AMQP 0.X (not 1.0)
+        testCompile group: 'org.apache.qpid', name: 'qpid-client', version: '6.3.4'
 
         // Flatbuffers for testing
         testCompile  group: 'com.google.flatbuffers', name: 'flatbuffers-java', version: '1.12.0'
