Helpers and unit tests for (de)serializing messages as flatbuffers.
Refs #73806

--- a/wres-statistics/nonsrc/jndi.properties
+++ b/wres-statistics/nonsrc/jndi.properties
@@ -8,5 +8,5 @@ connectionfactory.statisticsFactory = amqp://guest:guest@clientid/?brokerlist='t
 # Configure the necessary Queue and/or Topic objects
 # queue.<JNDI-lookup-name> = <queue-name>
 # topic.<JNDI-lookup-name> = <topic-name>
-# queue.statisticsQueue = queue
+queue.statisticsQueue = queue
 topic.statisticsTopic = topic
