--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ buildscript
     dependencies
     {
         // For markdown -> html
-        classpath 'com.atlassian.commonmark:commonmark:0.14.0'
+        classpath 'com.atlassian.commonmark:commonmark:0.15.1'
         // To create a unified javadoc across submodules and top-level module:
         classpath 'com.netflix.nebula:gradle-aggregate-javadocs-plugin:3.0.1'
     }
@@ -24,7 +24,7 @@ buildscript
 plugins
 {
     // Static analysis tool sonarqube client
-    id 'org.sonarqube' version '2.8'
+    id 'org.sonarqube' version '3.0'
 
     //id 'com.github.jacobono.jaxb' version '1.3.5'
     // Above is unmaintained, less gradle-y, below fork has several improvements
@@ -49,7 +49,7 @@ plugins
     id 'com.github.ksoichiro.console.reporter' version '0.6.2'
 
     // To discover library versions with known vulnerabilities
-    id 'org.owasp.dependencycheck' version '5.3.2'
+    id 'org.owasp.dependencycheck' version '5.3.2.1'
     
     // Task to assist in downloading artifacts
     id "de.undercouch.download" version "4.0.4"
@@ -202,7 +202,7 @@ project(':wres-util')
         compile 'com.google.guava:guava:29.0-jre'
         compile group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
 
-        compile('edu.ucar:cdm-core:5.3.1')
+        compile('edu.ucar:cdm-core:5.3.2')
         {
             // Because we use slf4j, not jcl:
             exclude group: 'commons-logging', module: 'commons-logging'
@@ -221,11 +221,11 @@ project(':wres-util')
         testCompile 'junit:junit:4.13'
 
         // Mocking help
-        testCompile 'org.mockito:mockito-core:3.2.4'
+        testCompile 'org.mockito:mockito-core:3.3.3'
 
         // super-duper mocking help (mocking static, private methods)
-        testCompile 'org.powermock:powermock-api-mockito2:2.0.5'
-        testCompile 'org.powermock:powermock-module-junit4:2.0.5'
+        testCompile 'org.powermock:powermock-api-mockito2:2.0.7'
+        testCompile 'org.powermock:powermock-module-junit4:2.0.7'
 
         testCompile files('../libs/external/EVS.jar')
     }
@@ -242,7 +242,7 @@ project(':wres-system')
 
         // to use native postgres copy, need this on compile, otherwise runtime
         compile 'org.postgresql:postgresql:42.2.12'
-        compile group: 'org.liquibase', name: 'liquibase-core', version: '3.8.9'
+        compile group: 'org.liquibase', name: 'liquibase-core', version: '3.9.0'
 
         // connection pooling:
         compile 'com.zaxxer:HikariCP:3.4.5'
@@ -256,15 +256,8 @@ project(':wres-system')
 
         testCompile 'junit:junit:4.13'
 
-        // Mocking help
-        testCompile 'org.mockito:mockito-core:3.2.4'
-
-        // super-duper mocking help (mocking static, private methods)
-        testCompile 'org.powermock:powermock-api-mockito2:2.0.5'
-        testCompile 'org.powermock:powermock-module-junit4:2.0.5'
-
         // Use mockserver to test certificate utilities
-        testCompile 'org.mock-server:mockserver-netty:5.9.0'
+        testCompile 'org.mock-server:mockserver-netty:5.10'
     }
 
     test
@@ -304,23 +297,20 @@ project(':wres-io')
         compile group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
 
         // JSON deserialization uses jackson directly. Specify recent version.
-        compile 'com.fasterxml.jackson.core:jackson-databind:2.10.3'
-        compile 'com.fasterxml.jackson.core:jackson-annotations:2.10.3'
-        compile 'com.fasterxml.jackson.core:jackson-core:2.10.3'
+        compile 'com.fasterxml.jackson.core:jackson-databind:2.10.4'
+        compile 'com.fasterxml.jackson.core:jackson-annotations:2.10.4'
+        compile 'com.fasterxml.jackson.core:jackson-core:2.10.4'
 
         // For Java 8 java.time support
-        compile 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.10.3'
+        compile 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.10.4'
 
-        compile('edu.ucar:cdm-core:5.3.1')
+        compile('edu.ucar:cdm-core:5.3.2')
         {
             // Because we use slf4j, not jcl:
             exclude group: 'commons-logging', module: 'commons-logging'
         }
 
-
         compile group: 'org.apache.commons', name: 'commons-compress', version: '1.20'
-
-        compile group: 'org.liquibase', name: 'liquibase-core', version: '3.8.9'
 
         // to use native postgres copy, need this on compile, otherwise runtime
         compile 'org.postgresql:postgresql:42.2.12'
@@ -335,7 +325,7 @@ project(':wres-io')
         compile 'commons-codec:commons-codec:1.14'
 
         // Better-than-Java-11's HTTP client
-        compile 'com.squareup.okhttp3:okhttp:4.5.0'
+        compile 'com.squareup.okhttp3:okhttp:4.7.2'
 
         // Because org.postgresql:postgresql uses JUL logging, bridge at runtime
         runtime 'org.slf4j:jul-to-slf4j:1.8.0-beta4'
@@ -348,15 +338,17 @@ project(':wres-io')
 
         testCompile 'junit:junit:4.13'
 
-        // Mocking help
-        testCompile 'org.mockito:mockito-core:3.2.4'
+        testCompile group: 'org.liquibase', name: 'liquibase-core', version: '3.9.0'
 
-        // super-duper mocking help (mocking static, private methods)
-        testCompile 'org.powermock:powermock-api-mockito2:2.0.5'
-        testCompile 'org.powermock:powermock-module-junit4:2.0.5'
+        // Mocking help
+        testCompile 'org.mockito:mockito-core:3.3.3'
+
+        // TODO: remove dependence on powermock, remove powermock completely.
+        testCompile 'org.powermock:powermock-api-mockito2:2.0.7'
+        testCompile 'org.powermock:powermock-module-junit4:2.0.7'
 
         // Use mockserver as a mock server for mock API responses
-        testCompile 'org.mock-server:mockserver-netty:5.9.0'
+        testCompile 'org.mock-server:mockserver-netty:5.10'
 
         // Use H2 for truly embedded SQL db
         testCompile 'com.h2database:h2:1.4.200'
@@ -409,7 +401,7 @@ project(':wres-metrics')
 
         testCompile project (':wres-datamodel')
         testCompile 'junit:junit:4.13'
-        testCompile 'org.mockito:mockito-core:3.2.4'
+        testCompile 'org.mockito:mockito-core:3.3.3'
     }
 }
 
@@ -424,7 +416,7 @@ project(':wres-statistics')
         // Automatically download and use the correct protobuf compiler
         protoc
         {
-            artifact = 'com.google.protobuf:protoc:3.11.4'
+            artifact = 'com.google.protobuf:protoc:3.12.2'
         }
         // So all IDEs/editors can see generated files, use actual src dir:
         generatedFilesBaseDir = "${generatedDir}"
@@ -782,7 +774,7 @@ project(':wres-statistics')
     dependencies
     {
         compile 'org.slf4j:slf4j-api:1.8.0-beta4'
-        compile 'com.google.protobuf:protobuf-java:3.11.4'
+        compile 'com.google.protobuf:protobuf-java:3.12.2'
         compile project(':wres-datamodel')
         compile project(':wres-config')
         
@@ -797,13 +789,7 @@ project(':wres-statistics')
 
         runtime 'ch.qos.logback:logback-classic:1.3.0-alpha4'
 
-        testCompile group: 'com.google.protobuf', name: 'protobuf-java-util', version: '3.0.0-beta-1'
         testCompile 'junit:junit:4.13'
-        testCompile project(':wres-datamodel')
-        testCompile project(':wres-config')
-
-        // JMS API
-        testCompile group: 'javax.jms', name: 'javax.jms-api', version: '2.0.1'
         
         // QPID broker
         testCompile 'org.apache.qpid:qpid-broker-core:7.1.8'
@@ -816,9 +802,6 @@ project(':wres-statistics')
 
         // QPID JMS client for AMQP 0.X (not 1.0)
         testCompile group: 'org.apache.qpid', name: 'qpid-client', version: '6.3.4'
-
-        // Flatbuffers for testing
-        testCompile  group: 'com.google.flatbuffers', name: 'flatbuffers-java', version: '1.12.0'
     }
 }
 
@@ -888,8 +871,8 @@ project(':wres-vis')
         compile project(':wres-config')
         compile project(':wres-util')        
 
-        compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.9'
-        compile group: 'com.sun.xml.fastinfoset', name: 'FastInfoset', version: '1.2.17'
+        compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.10'
+        compile group: 'com.sun.xml.fastinfoset', name: 'FastInfoset', version: '1.2.18'
         compile 'com.google.guava:guava:29.0-jre'
         compile 'org.slf4j:slf4j-api:1.8.0-beta4'
         runtime 'ch.qos.logback:logback-classic:1.3.0-alpha4'
@@ -929,7 +912,7 @@ project(':wres-config')
         compile 'org.slf4j:slf4j-api:1.8.0-beta4'
 
         // For Java 9+ compatibility:
-        compile 'jakarta.xml.bind:jakarta.xml.bind-api:2.3.2'
+        compile 'jakarta.xml.bind:jakarta.xml.bind-api:2.3.3'
 
         // TODO: check that this is consistent with the declaration of dependencies elsewhere
         // and update if not. Added in the context of #44996
@@ -939,9 +922,9 @@ project(':wres-config')
         // To know about @Location
         compile 'org.glassfish.jaxb:jaxb-core:2.3.0.1'
 
-        runtime 'org.glassfish.jaxb:jaxb-runtime:2.3.2'
+        runtime 'org.glassfish.jaxb:jaxb-runtime:2.3.3'
 
-        runtime 'org.eclipse.persistence:org.eclipse.persistence.moxy:2.7.6'
+        runtime 'org.eclipse.persistence:org.eclipse.persistence.moxy:2.7.7'
 
         testCompile 'junit:junit:4.13'
 
@@ -956,8 +939,8 @@ project(':wres-config')
         jaxb 'commons-beanutils:commons-beanutils:1.9.4'
 
         // jaxb-xjc transitively includes bind-api and jaxb-core
-        jaxb 'org.glassfish.jaxb:jaxb-xjc:2.3.2'
-        jaxb 'com.github.sabomichal:immutable-xjc-plugin:1.6.1'
+        jaxb 'org.glassfish.jaxb:jaxb-xjc:2.3.3'
+        jaxb 'com.github.sabomichal:immutable-xjc-plugin:1.6.2'
     }
 
     def generatedIntermediateDir = "${project.buildDir}/generated"
@@ -1030,7 +1013,7 @@ project(':wres-grid')
         compile project(':wres-util')
         compile project(':wres-system')
         compile 'org.slf4j:slf4j-api:1.8.0-beta4'
-        compile('edu.ucar:cdm-core:5.3.1')
+        compile('edu.ucar:cdm-core:5.3.2')
         {
             // Because we use slf4j, not jcl:
             exclude group: 'commons-logging', module: 'commons-logging'
@@ -1056,7 +1039,7 @@ project(':wres-messages')
         // Automatically download and use the correct protobuf compiler
         protoc
         {
-            artifact = 'com.google.protobuf:protoc:3.11.4'
+            artifact = 'com.google.protobuf:protoc:3.12.2'
         }
         // So all IDEs/editors can see generated files, use actual src dir:
         generatedFilesBaseDir = "${generatedDir}"
@@ -1093,7 +1076,7 @@ project(':wres-messages')
     dependencies
     {
         compile 'org.slf4j:slf4j-api:1.8.0-beta4'
-        compile 'com.google.protobuf:protobuf-java:3.11.4'
+        compile 'com.google.protobuf:protobuf-java:3.12.2'
 
         testCompile 'junit:junit:4.13'
     }
@@ -1153,31 +1136,31 @@ project(':wres-tasker')
         compile 'javax.annotation:javax.annotation-api:1.3.2'
 
         // For Java 9+ compatibility:
-        compile 'jakarta.xml.bind:jakarta.xml.bind-api:2.3.2'
+        compile 'jakarta.xml.bind:jakarta.xml.bind-api:2.3.3'
 
         // Server library to run a web server:
-        compile 'org.eclipse.jetty:jetty-server:9.4.28.v20200408'
+        compile 'org.eclipse.jetty:jetty-server:9.4.29.v20200521'
 
         // Servlet container library to run a web application with:
-        compile 'org.eclipse.jetty:jetty-webapp:9.4.28.v20200408'
+        compile 'org.eclipse.jetty:jetty-webapp:9.4.29.v20200521'
 
         // Needed at compile-time to reference ServletContainer.class and
         // DefaultServlet.class
-        compile 'org.glassfish.jersey.containers:jersey-container-servlet-core:2.29.1'
+        compile 'org.glassfish.jersey.containers:jersey-container-servlet-core:2.31'
         // Update the jetty-continuation depended upon by above jersey dep
-        compile 'org.eclipse.jetty:jetty-continuation:9.4.28.v20200408'
+        compile 'org.eclipse.jetty:jetty-continuation:9.4.29.v20200521'
 
-        compile 'com.github.ben-manes.caffeine:caffeine:2.8.1'
+        compile 'com.github.ben-manes.caffeine:caffeine:2.8.4'
 
         // To accurately detect mime types of files.
-        compile 'org.apache.tika:tika-core:1.24'
+        compile 'org.apache.tika:tika-core:1.24.1'
 
         runtime 'ch.qos.logback:logback-classic:1.3.0-alpha4'
-        runtime 'org.glassfish.jersey.core:jersey-server:2.30'
+        runtime 'org.glassfish.jersey.core:jersey-server:2.31'
 
         // Needed to prevent "java.lang.IllegalStateException: InjectionManagerFactory not found."
         // Thanks, https://luohuahuang.org/2017/11/13/jersey-illegalstateexception-injectionmanagerfactory/
-        runtime 'org.glassfish.jersey.inject:jersey-hk2:2.30'
+        runtime 'org.glassfish.jersey.inject:jersey-hk2:2.31'
 
         testCompile 'junit:junit:4.13'
 
@@ -1371,26 +1354,26 @@ dependencies
 
     compile 'javax.ws.rs:javax.ws.rs-api:2.1.1'
     compile 'javax.annotation:javax.annotation-api:1.3.2'
-    compile 'org.eclipse.jetty:jetty-server:9.4.28.v20200408'
-    compile 'org.eclipse.jetty:jetty-webapp:9.4.28.v20200408'
-    compile 'org.glassfish.jersey.containers:jersey-container-servlet-core:2.30'
+    compile 'org.eclipse.jetty:jetty-server:9.4.29.v20200521'
+    compile 'org.eclipse.jetty:jetty-webapp:9.4.29.v20200521'
+    compile 'org.glassfish.jersey.containers:jersey-container-servlet-core:2.31'
     // Update the jetty-continuation that above jersey dep depends on
-    compile 'org.eclipse.jetty:jetty-continuation:9.4.28.v20200408'
+    compile 'org.eclipse.jetty:jetty-continuation:9.4.29.v20200521'
 
     compile 'com.github.ben-manes.caffeine:caffeine:2.8.1'
 
-    runtime 'org.glassfish.jersey.core:jersey-server:2.30'
-    runtime 'org.glassfish.jersey.containers:jersey-container-jetty-http:2.30'
-    runtime 'org.glassfish.jersey.inject:jersey-hk2:2.30'
+    runtime 'org.glassfish.jersey.core:jersey-server:2.31'
+    runtime 'org.glassfish.jersey.containers:jersey-container-jetty-http:2.31'
+    runtime 'org.glassfish.jersey.inject:jersey-hk2:2.31'
 
     runtime 'ch.qos.logback:logback-classic:1.3.0-alpha4'
 
 
-    testCompile group: 'commons-io', name: 'commons-io', version: '2.6'
+    testCompile group: 'commons-io', name: 'commons-io', version: '2.7'
     testCompile group: 'com.google.guava', name: 'guava-testlib', version: '29.0-jre'
     testCompile group: 'com.google.guava', name: 'guava', version: '29.0-jre'
     testCompile 'junit:junit:4.13'
-    testCompile 'org.mockito:mockito-core:3.2.4'
+    testCompile 'org.mockito:mockito-core:3.3.3'
 }
 
 sourceSets
