Adds the qpid web management interface for an embedded broker.
Improves the documentation of the protobuf schema.

Removes flatbuffer schema sources.

Refs #79280

--- a/build.gradle
+++ b/build.gradle
@@ -661,6 +661,9 @@ project(':wres-statistics')
         // QPID embedded (aka in-memory) broker support
         testCompile 'org.apache.qpid:qpid-broker-plugins-memory-store:7.1.8'
 
+        // https://mvnrepository.com/artifact/org.apache.qpid/qpid-broker-plugins-management-http
+        testCompile group: 'org.apache.qpid', name: 'qpid-broker-plugins-management-http', version: '8.0.0'
+
         // QPID JMS client for AMQP 0.X (not 1.0)
         testCompile group: 'org.apache.qpid', name: 'qpid-client', version: '6.3.4'
     }
